Flipping to new jekyll theme
moved to a responsive theme. initial commit of new format + converted ppt presentation

--- a/404.html
+++ b/404.html
@@ -1,24 +1,49 @@
 ---
 layout: default
+title: 404
+permalink: /404.html
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+<div class="container-fluid index error">
+  <div class="row">
 
-<div class="container">
-  <h1>404</h1>
+    <div class="col-md-12 content-panel articles">
+      <h1 class="header author-header">404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+      <div class="error-text">
+        Sorry but this page doesn't seem to exist.
+      </div>
+
+      <div class="error-text">
+        <a href="{{ site.baseurl }}/">Home</a> |
+        <a href="{{ site.baseurl }}/about/">About</a> |
+        <a href="{{ site.baseurl }}/posts/">All Posts</a> |
+        <a href="{{ site.baseurl }}/search/">Search</a>
+      </div>
+
+      {% include social_links.html %}
+
+    </div>
+
+  </div>
+
+  <div class="content-panel related">
+    {% for post in site.posts limit:1 %}
+      <div class="related-header">
+        <a href="{{ site.baseurl }}{{ post.url }}">Suggested Article</a>
+      </div>
+      <div class="title">
+        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+      </div>
+      <div class="excerpt">
+         {% if post.summary %}
+          {{ post.summary | strip_html | truncatewords:30 }}
+         {% else %}
+          {{ post.excerpt | strip_html | truncatewords:30 }}
+         {% endif %}
+        <a href="{{ site.baseurl }}{{ post.url }}">Continue Reading</a>
+      </div>
+    {% endfor %}
+  </div>
+
 </div>
