Updating formating, profile picture and minor editing

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ layout: about
     <br>
     <div>
       <p align="center">
-      <img src="{{ '/assets/0.jpg' | relative_url }}">
+      <img src="{{ '/assets/0.png' | relative_url }}">
       </p>
       <h2>Who am I?</h2>
       <p>My name is Patrick Downing and I've been dabbling with computers and technology since the late 90s. I've always had a fascination of how things work and thoroughly enjoyed breaking them to find out how they tick. From re-installing the DIMMs backwards on my first computer with a little too much vigor, to accidentally formating the family's Windows 95 C:\ drive while figuring out how to use the command prompt - I'm no stranger to breaking an egg ... or motherboard ... or two.
