--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@ make-smaller-titles: true
 
                       <li>
                           <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-                          <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small>
+                          <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small><br>
                       </li>
-
                   {% endfor %}
                   <li>
                       <small><i><a href="{{ site.baseurl }}/posts/">more...</a></i></small>
