--- a/posts-by-categories.html
+++ b/posts-by-categories.html
@@ -30,6 +30,7 @@ make-smaller-titles: true
               <li>
                 <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
                 <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small>
+                <small class="hidden-xs">{{ post.summary | strip_html | truncatewords:30 }}</small>
               </li>
             {% endfor %}
           {% endfor %}
