--- a/posts.html
+++ b/posts.html
@@ -34,7 +34,8 @@ make-smaller-titles: true
 
           <li>
             <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-            <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small>
+            <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small><br>
+            <small class="hidden-xs">{{ post.summary | strip_html | truncatewords:30 }}</small>
           </li>
       {% if forloop.last %}
         </ul>
