--- a/posts-by-categories.html
+++ b/posts-by-categories.html
@@ -29,7 +29,7 @@ make-smaller-titles: true
             {% for post in posts %}
               <li>
                 <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-                <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small>
+                <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small><br>
                 <small class="hidden-xs">{{ post.summary | strip_html | truncatewords:30 }}</small>
               </li>
             {% endfor %}
