Posts page format update

--- a/posts.html
+++ b/posts.html
@@ -31,11 +31,9 @@ make-smaller-titles: true
         <h2 id="{{ this_year }}-ref">{{ this_year }}</h2>
         <ul>
       {% endif %}
-
           <li>
             <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-            <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small><br>
-            <small class="hidden-xs">{{ post.summary | strip_html | truncatewords:30 }}</small>
+            <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small>
           </li>
       {% if forloop.last %}
         </ul>
