Adding personal views disclaimer

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -4,7 +4,7 @@ layout: about
 
 <h1>Disclaimer</h1>
 
-<p>Last updated: October 05, 2019</p>
+<p>Last updated: October 10, 2019</p>
 
 <p>The information contained on the https://padraignix.github.io website (the "Service") is for general information purposes only.</p>
 
@@ -13,6 +13,8 @@ layout: about
 <p>In no event shall Padraignix's InfoSec Blog be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, whether in an action of contract, negligence or other tort, arising out of or in connection with the use of the Service or the contents of the Service. Padraignix's InfoSec Blog reserves the right to make additions, deletions, or modification to the contents on the Service at any time without prior notice.</p>
 
 <p>Padraignix's InfoSec Blog does not warrant that the website is free of viruses or other harmful components.</p>
+
+<p>The views and opinions expressed on Padraignix's InfoSec Blog_ are those of the author and do not necessarily reflect the official policy or position of any other agency, organization, employer or company. Any content provided by the author is of their opinion and is not intended to malign any religion, ethnic group, club, organization, company, individual or anyone or anything.</p>
 
 <h1>Cookies Policy</h1>
 
@@ -206,5 +208,5 @@ layout: about
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, please contact us:</p>
     <ul>
-        <li>By email: padraignix.legal@gmail.com</li>
+        <li>By email: padraignix [dot] legal [at] gmail [dot] com</li>
     </ul>
