Condensing link text for size formating

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -18,7 +18,7 @@ layout: about
 
 <h1>Cookies Policy</h1>
 
-<p>Last updated: October 05, 2019</p>
+<p>Last updated: October 24, 2019</p>
 
 <p>Padraignix's InfoSec Blog_ ("us", "we", or "our") uses cookies on the https://padraignix.github.io website (the "Service"). By using the Service, you consent to the use of cookies.</p>
 
@@ -56,16 +56,16 @@ layout: about
 
 <ul>
 <li>
-    <p>For the Chrome web browser, please visit this page from Google: <a href="https://support.google.com/accounts/answer/32050">https://support.google.com/accounts/answer/32050</a></p>
+    <p>For the Chrome web browser, please visit this page from Google: <a href="https://support.google.com/accounts/answer/32050">link</a></p>
 </li>
 <li>
-    <p>For the Internet Explorer web browser, please visit this page from Microsoft: <a href="http://support.microsoft.com/kb/278835">http://support.microsoft.com/kb/278835</a></p>
+    <p>For the Internet Explorer web browser, please visit this page from Microsoft: <a href="http://support.microsoft.com/kb/278835">link</a></p>
 </li>
 <li>
-    <p>For the Firefox web browser, please visit this page from Mozilla: <a href="https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored">https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored</a></p>
+    <p>For the Firefox web browser, please visit this page from Mozilla: <a href="https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored">link</a></p>
 </li>
 <li>
-    <p>For the Safari web browser, please visit this page from Apple: <a href="https://support.apple.com/kb/PH21411?locale=en_US">https://support.apple.com/kb/PH21411?locale=en_US</a></p>
+    <p>For the Safari web browser, please visit this page from Apple: <a href="https://support.apple.com/kb/PH21411?locale=en_US">link</a></p>
 </li>
 <li>
     <p>For any other web browser, please visit your web browser's official web pages.</p>
@@ -78,10 +78,10 @@ layout: about
 
 <ul>
 <li>
-    <p>AllAboutCookies: <a href="http://www.allaboutcookies.org/">http://www.allaboutcookies.org/</a></p>
+    <p>AllAboutCookies: <a href="http://www.allaboutcookies.org/">link</a></p>
 </li>
 <li>
-    <p>Network Advertising Initiative: <a href="http://www.networkadvertising.org/">http://www.networkadvertising.org/</a></p>
+    <p>Network Advertising Initiative: <a href="http://www.networkadvertising.org/">link</a></p>
 </li>
 </ul>
 
