--- a/posts.html
+++ b/posts.html
@@ -10,7 +10,33 @@ make-smaller-titles: true
     <h1 class="header author-header">{{ site.author_name }}</h1>
     <h2 class="header" itemprop="headline">All posts</h2>
 
-      {% for post in site.posts %}
+    {% for category in site.categories %}
+    <div class="col-md-12 content-panel articles">
+      <h2 id="{{ category | first }}-ref">{{ category | first }}</h2>
+      <ul>
+        {% for posts in category %}
+          {% for post in posts %}
+            <li>
+              <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+              <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small>
+              {% if post.tags and post.tags.size > 0 %}
+              <div class="tags">
+                <small class="hidden-xs">
+                <i class="fa fa-tags"></i>
+                  {{ post.tags | join: ', ' }}
+                </small>
+              </div>
+              {% endif %}
+            </li>
+          {% endfor %}
+        {% endfor %}
+
+      </ul>
+    </div>
+    {% endfor %}
+
+
+<!--  {% for post in site.posts %}
       {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
       {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
 
@@ -37,6 +63,7 @@ make-smaller-titles: true
     {% endif %}
 
     {% endfor %}
+-->
     </div>
 
   </div>
