--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ make-smaller-titles: true
                 <img src="{{ site.title_image }}" class="img-circle about-image" height="150" width="150" alt="{{ site.title }}" />
             </div>
 
-            <h1 class="header author-header" itemprop="headline">{{ site.title }}</h1>
+            <h1 class="header author-header" itemprop="headline">Padraignix's InfoSec Blog<i class='blink'>_</i></h1>
 
             <div class="author-text">
                 {{ site.title_description }}
