--- a/projects.html
+++ b/projects.html
@@ -25,10 +25,10 @@ layout: default
       <div class="col-md-12 content-panel articles">
         <h2>CryptoPals</h2>
         <p>
-          From the moment I stumbled on to <a href="https://cryptopals.com/"><font color="green">CryptoPals</font></a> I knew I wanted to go through the problem set. I decided to approach these challenges with a set purpose - to help solidify my Python coding skills as well offer me a chance to work with cryptographic algorithms directly where I may not have had an excuse to do so previously. I really want to take the opporunity to dig into the algorithms themselves and expand on my knowledge of weaknesses that these algorithms may have.
+          From the moment I stumbled on to <a href="https://cryptopals.com/"><font color="green">CryptoPals</font></a> I knew I wanted to go through the problem set. I decided to approach these challenges with a set purpose - to help solidify my Python coding skills as well offer me a chance to work with cryptographic algorithms directly where I may not have had an excuse to do so previously. I really want to take the opportunity to dig into the algorithms themselves and expand on my knowledge of weaknesses that these algorithms may have.
         </p>
         <p>
-          The plan will be to approach each of the problem sets as a unit. I will do my best to write an article covering each problem set individually, focusing on any particular challenge or interesting aspect I ran into while solving the set. Additionally I plan on uploading my solutions to <a href="https://github.com/{{ site.github_username }}"><font color="green">GitHub</font></a>. 
+          The plan will be to approach each of the problem sets as a unit. I will do my best to write an article covering each problem set individually, focusing on any particular challenge or interesting aspects I ran into while solving the set. Additionally I plan on uploading my solutions to <a href="https://github.com/{{ site.github_username }}"><font color="green">GitHub</font></a>. 
         </p>
       </div>
       <div class="col-md-12 content-panel articles">
