--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,12 @@
 ---
 layout: default
+title: Padraignix's InfoSec Blog - Ongoing Projects
 ---
 
 <div class="container-fluid index">
     <div class="row index all-posts">
 
-      <h2 class="header" itemprop="headline">2020 Projects</h2>
+      <h1 class="header" itemprop="headline">2020 Projects</h1>
 
       <div class="col-md-12 content-panel articles">
         <h2>Introduction</h2>
