Updating summary and page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 make-smaller-titles: true
 title: Padraignix's InfoSec Blog
-summary: Padraignix's InfoSec Blog
+summary: Personal blog covering CTF events, Security Infrastructure, Cryptography, Emulator development, Quantum Technology and related adventures
 ---
 
 
