SEO optimization and file restructure

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 ---
 layout: about
 title: Padraignix's InfoSec Blog - About Me
+summary: Padraignix's InfoSec Blog - About Me. Who I am, my journey, and fun facts about myself.
 ---
 
 <div class="container-fluid index">
