--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,6 +1,7 @@
 ---
 layout: about
 title: Padraignix's InfoSec Blog - Disclaimer
+summary: Legal disclaimer, Cookie policy, and Privacy policy for Padraignix's InfoSec Blog.
 ---
 
 <h1>Disclaimer</h1>
