--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Padraignix's InfoSec Blog - Ongoing Projects
+summary: Breakdown list of ongoing 2020 projects that I would like to accomplish within the year.
 ---
 
 <div class="container-fluid index">
