--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 make-smaller-titles: true
-title: Padraignix's InfoSec Blog
+title: Padraignix's InfoSec Blog - Main Page
 summary: Personal blog covering CTF events, Security Infrastructure, Cryptography, Emulator development, Quantum Technology and related adventures
+keywords: hacking, blog,information security,infosec,hackthebox,quantum computing,quantum technology,emulation,emulators,reverse engineering
 ---
 
 
