Fixing SEO in about page

--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
 ---
 layout: about
-title: Padraignix's InfoSec Blog - About Me
+title: 
+title2: Padraignix's InfoSec Blog - About Me
 summary: Padraignix's InfoSec Blog - About Me. Who I am, my journey, and fun facts about myself.
+keywords: hacking, blog,information security,infosec,hackthebox,quantum computing,quantum technology,emulation,emulators,reverse engineering
 ---
 
 <div class="container-fluid index">
