SEO og/twitter header and typo fix

--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@ permalink: /404.html
         <a href="{{ site.baseurl }}{{ post.url }}">Suggested Article</a>
       </div>
       <div class="title">
-        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title2 }}</a>
       </div>
       <div class="excerpt">
          {% if post.summary %}
