--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ make-smaller-titles: true
 title: Padraignix's InfoSec Blog - Main Page
 summary: Personal blog covering CTF events, Security Infrastructure, Cryptography, Emulator development, Quantum Technology and related adventures
 keywords: hacking, blog,information security,infosec,hackthebox,quantum computing,quantum technology,emulation,emulators,reverse engineering
+thumbnail:  https://github.com/padraignix.png
+canon:      https://padraignix.github.io
 ---
 
 
