--- a/posts.html
+++ b/posts.html
@@ -2,6 +2,8 @@
 layout: default
 title: Padraignix's InfoSec Blog - All Posts
 summary: Padraignix's InfoSec Blog - All Posts. A quick summary of all articles released.
+thumbnail:  https://github.com/padraignix.png
+canon:      https://padraignix.github.io/posts/
 ---
 
 
