--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,8 @@
 layout: default
 title: Padraignix's InfoSec Blog - Ongoing Projects
 summary: Breakdown list of ongoing 2020 projects that I would like to accomplish within the year.
+thumbnail:  https://github.com/padraignix.png
+canon:      https://padraignix.github.io/projects/
 ---
 
 <div class="container-fluid index">
@@ -39,7 +41,7 @@ summary: Breakdown list of ongoing 2020 projects that I would like to accomplish
           This project is a revamp of a 2017 effort I started but never quite completed - a GameBoy emulator. I had originally managed to write a partially working GB emulator in C, however I did not quite sort out sprite issues to make it truly playable.
         </p>
         <p>
-          I want to tackle this projet with a few differences to how I attempted it years ago. Firstly, I want to take this opportunity to explore the Rust language rather than coding it in C once again. Rust was a language I was first introduced to in 2019 and after some background reading I decided I wanted to explore the language a but further. The emulator project was a perfect project to get dive head first into learning the language.
+          I want to tackle this projet with a few differences to how I attempted it years ago. Firstly, I want to take this opportunity to explore the Rust language rather than coding it in C once again. Rust was a language I was first introduced to in 2019 and after some background reading I decided I wanted to explore the language a bit further. The emulator project was a perfect project to get dive head first into learning the language.
         </p>
         <p>
           Instead of starting off directly with a GB emulator I'm planning on approaching this effort in a more progressive manner. Since I do not have a proper background with the Rust language the plan is to start with a simpler Chip8 emulator. This will hopefully allow a more gradual introduction to the Rust language with a "simplified" emulator project that can be expanded to a full GB emulator.
