--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@ title:
 title2: Padraignix's InfoSec Blog - About Me
 summary: Padraignix's InfoSec Blog - About Me. Who I am, my journey, and fun facts about myself.
 keywords: hacking, blog,information security,infosec,hackthebox,quantum computing,quantum technology,emulation,emulators,reverse engineering
+thumbnail:  https://github.com/padraignix.png
+canon:      https://padraignix.github.io/about/
 ---
 
 <div class="container-fluid index">
