--- a/projects.html
+++ b/projects.html
@@ -20,20 +20,14 @@ canon:      https://padraignix.github.io/projects/
       <div class="col-md-12 content-panel articles">
         <h2>CISM - ISACA</h2>
         <p>
-          A few years ago I went through the <a href="https://www.isaca.org/credentialing/cisa"><font color="green">CISA</font></a> certification process. Now I'm challenging myself to get the <a href="https://www.isaca.org/credentialing/cism"><font color="green">CISM</font></a> certification. There are a few reasons as to "why" that I will try and cover through a series of posts.
-        </p>
-        <p>
-          These articles will serve as a personal review and help reinforce the concepts covered within the four domains covered - trying to do an article per domain.
+          A few years ago I went through the <a href="https://www.isaca.org/credentialing/cisa"><font color="green">CISA</font></a> certification process. Now I'm challenging myself to get the <a href="https://www.isaca.org/credentialing/cism"><font color="green">CISM</font></a> certification.
         </p>
       </div>
       <div class="col-md-12 content-panel articles">
-        <h2>CryptoPals</h2>
+        <h2>Org-in-a-Box</h2>
         <p>
-          From the moment I stumbled on to <a href="https://cryptopals.com/"><font color="green">CryptoPals</font></a> I knew I wanted to go through the problem set. I decided to approach these challenges with a set purpose - to help solidify my Python coding skills as well offer me a chance to work with cryptographic algorithms directly where I may not have had an excuse to do so previously. I really want to take the opportunity to dig into the algorithms themselves and expand on my knowledge of weaknesses that these algorithms may have.
-        </p>
-        <p>
-          The plan will be to approach each of the problem sets as a unit. I will do my best to write an article covering each problem set individually, focusing on any particular challenge or interesting aspects I ran into while solving the set. Additionally I plan on uploading my solutions to <a href="https://github.com/{{ site.github_username }}"><font color="green">GitHub</font></a>. 
-        </p>
+        The crowning jewel of creating a local infrastructure lab. I am planning on creating a self-contained "Organization" that will touch on the most common components seen - authentication, identity, automation, logging, and security analysis. I plan on starting with a architectural view, planning a round of deliverables and slowly building on it as I am successful. The focus will be not only on the IT aspect of getting it to work but also keeping security in the forefront my mind. Security decisions will be explored and explained.  
+        </p> 
       </div>
       <div class="col-md-12 content-panel articles">
         <h2>Emulator Development</h2>
