--- a/projects.html
+++ b/projects.html
@@ -11,25 +11,25 @@ canon:      https://padraignix.github.io/projects/
 
       <h1 class="header" itemprop="headline">2020 Projects</h1>
 
-      <div class="col-md-12 content-panel articles">
+      <div id="post-list">
         <h2>Introduction</h2>
         <p>
           Essentially this is a wishlist of items I'd like to get completed in 2020 - or later years if I really want to start planning ahead. I started this blog as a way to stay accountable of my efforts by posting updates and ensuring that I keep myself on track. Now I'm taking this a step further and planning out certain efforts ahead of time while I work on them during any rapidly diminishing free time. 
         </p>
       </div>
-      <div class="col-md-12 content-panel articles">
+      <div id="post-list">
         <h2>CISM - ISACA</h2>
         <p>
           A few years ago I went through the <a href="https://www.isaca.org/credentialing/cisa"><font color="green">CISA</font></a> certification process. Now I'm challenging myself to get the <a href="https://www.isaca.org/credentialing/cism"><font color="green">CISM</font></a> certification.
         </p>
       </div>
-      <div class="col-md-12 content-panel articles">
+      <div id="post-list">
         <h2>Org-in-a-Box</h2>
         <p>
         The crowning jewel of creating a local infrastructure lab. I am planning on creating a self-contained "Organization" that will touch on the most common components seen - authentication, identity, automation, logging, and security analysis. I plan on starting with a architectural view, planning a round of deliverables and slowly building on it as I am successful. The focus will be not only on the IT aspect of getting it to work but also keeping security in the forefront my mind. Security decisions will be explored and explained.  
         </p> 
       </div>
-      <div class="col-md-12 content-panel articles">
+      <div id="post-list">
         <h2>Emulator Development</h2>
         <p>
           This project is a revamp of a 2017 effort I started but never quite completed - a GameBoy emulator. I had originally managed to write a partially working GB emulator in C, however I did not quite sort out sprite issues to make it truly playable.
