SEO updates to QuantumlyConfused

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 layout: home
 breadcrumb:
   -
-    label: Posts
+    label: Posts 
 
 title: Quantumly Confused Blog - Main Page
-summary: Personal blog covering CTF events, Security Infrastructure, Cryptography, Emulator development, Quantum Technology and related adventures
+summary: Personal blog covering Quantum Computing, CTF events, Security Infrastructure, Cryptography, Emulator development, Quantum Technology and related adventures
 keywords: hacking,quantumly confused,blog,information security,infosec,hackthebox,quantum computing,quantum technology,emulation,emulators,reverse engineering
 thumbnail:  https://github.com/padraignix.png
-canon:      https://padraignix.github.io
+canon:      https://blog.quantumlyconfused.com
 ---
