--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Padraignix's InfoSec Blog - Ongoing Projects
+title: Quantumly Confused - Ongoing Projects
 summary: Breakdown list of ongoing 2020 projects that I would like to accomplish within the year.
 thumbnail:  https://github.com/padraignix.png
-canon:      https://padraignix.github.io/projects/
+canon:      https://blog.quantumlyconfused.com/projects/
 ---
 
 <div class="container-fluid index">
