Adding in new site disclaimer and index header

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 breadcrumb:
   -
-    label: Posts 
+    label: Quantumly Confused Blog - Main Page
 
 title: Quantumly Confused Blog - Main Page
 summary: Personal blog covering Quantum Computing, CTF events, Security Infrastructure, Cryptography, Emulator development, Quantum Technology and related adventures
